--- a/css.css
+++ b/css.css
@@ -46,3 +46,27 @@ header{
 .flex-child:first-child{
   margin-right: 20px;
 }
+
+#optionsDiv{
+  position: relative;
+}
+
+#buttonsDivID{
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  background-color: inherit;
+  padding: 10px;
+}
+
+.optionButton{
+  background-color: white;
+  color: #444;
+  cursor: pointer;
+  padding: 5px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 15px;
+}
